frontend/test/should_fail/uniqueofNode_exec.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	n:Node;
	
	modify {
	---
		exec( { { uniqueof(n)==42 } } );
	}
}
